// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`startProcessing, server 1`] = `
Array [
  Array [
    [Function],
    15000,
  ],
]
`;

exports[`startProcessing, server 2`] = `
Array [
  Array [
    "orders|queue",
  ],
  Array [
    "orders|queue",
  ],
]
`;

exports[`startProcessing, server 3`] = `
Array [
  Array [
    "orders",
    10,
  ],
  Array [
    "orders",
    10,
  ],
]
`;

exports[`startProcessing, server 4`] = `
Array [
  Array [
    [Function],
    500,
  ],
  Array [
    [Function],
    0,
  ],
]
`;
